--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,8 @@
-@import url('./user.css');*
+@import url('./user.css');
+@import url('./social.css');
+@import url('./about.css');
 
-{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -40,10 +42,6 @@
     margin:  160px auto 100px;
 }
 
-section {
-    height: 400px;
-}
-
 .projects {
     grid-column: 1/3;
 }
@@ -52,4 +50,9 @@ section {
     border-radius: 12px;
     background: var(--background-card);
     box-shadow:  var(--background-card);
+}
+
+.subtitle {
+    font-size: 28px;
+    font-weight: 600;
 }
