--- a/styles/projects.css
+++ b/styles/projects.css
@@ -29,7 +29,7 @@
 
 .project picture {
     width: 100%;
-    height: 600px;
+    height: 500px;
 
     overflow: hidden;
 }
@@ -78,3 +78,31 @@
 .project:hover strong{
     color: var(--link);
 }
+
+@media(max-width: 1080px) {
+    .projects {
+        padding: 24px;
+    }
+
+    #project__content {    
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    
+}
+
+@media(max-width: 768px) {
+    #project__content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .project {    
+        height: 180px;
+    } 
+}
+
+
+
+
+
